--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="timercontainer">
             00:00:00
         </div>
-        <input type="button" value="Start" id="start" onclick="startTimer()">
+        <input type="button" value="Start" id="stat" onclick="startTimer()">
         <input type="button" value="Pause" id="pause" onclick="stopTimer()">
         <input type="button" value="Reset" id="reset" onclick="resetTimer()">
         <ul id="lapTime">
